updated url to ghpage for kube vm

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </header>
       <section>
         <ul>
-<li><a href="https://github.com/jcderr/docker-kube-vm">Kubernetes VM for Devs</a></li>
+<li><a href="http://jcderr.github.io/docker-kube-vm/">Kubernetes VM for Devs</a></li>
 <li><a href="https://github.com/jcderr/kubes">Kubes</a></li>
 </ul>
       </section>
