fix improper character encoding

--- a/_posts/2013-08-29-good-guys-with-guns-indeed.html
+++ b/_posts/2013-08-29-good-guys-with-guns-indeed.html
@@ -19,7 +19,7 @@ categories:
 tags: []
 comments: []
 ---
-<p>Brenda Barnett, out of the Arkansas Democrat-Gazette:<&#47;p></p>
+<p>Brenda Barnett, out of the Arkansas Democrat-Gazette:</p></p>
 <blockquote>
-<p>After the shooting at Sandy Hook Elementary School in Connecticut, [State Senator Jeremy] Hutchinson became interested in arming school personnel, he said. He was invited to attend an &ldquo;active shooter&rdquo; training and - using a rubber bullet-loaded pistol - he mistakenly shot a teacher who was confronting a &ldquo;bad guy.&rdquo;<&#47;p><br />
-<&#47;blockquote></p>
+<p>After the shooting at Sandy Hook Elementary School in Connecticut, [State Senator Jeremy] Hutchinson became interested in arming school personnel, he said. He was invited to attend an &ldquo;active shooter&rdquo; training and - using a rubber bullet-loaded pistol - he mistakenly shot a teacher who was confronting a &ldquo;bad guy.&rdquo;</p><br />
+</blockquote></p>
