--- a/_posts/2013-08-29-no-one-knows-why.html
+++ b/_posts/2013-08-29-no-one-knows-why.html
@@ -19,7 +19,7 @@ categories:
 tags: []
 comments: []
 ---
-<p>The Tor Project's Roger Dingledine:<&#47;p></p>
+<p>The Tor Project's Roger Dingledine:</p></p>
 <blockquote>
-<p>There's a slight increase (worsening) in the performance measurements, but it's hard to say if that's a real difference. So while there are a bunch of new Tor clients running, it would seem they're not doing much. Anybody know details?<&#47;p><br />
-<&#47;blockquote></p>
+<p>There's a slight increase (worsening) in the performance measurements, but it's hard to say if that's a real difference. So while there are a bunch of new Tor clients running, it would seem they're not doing much. Anybody know details?</p><br />
+</blockquote></p>
