--- a/_posts/2013-08-29-passed-good-enough.html
+++ b/_posts/2013-08-29-passed-good-enough.html
@@ -19,8 +19,8 @@ categories:
 tags: []
 comments: []
 ---
-<p>Pro photog Ming Thein:<&#47;p></p>
+<p>Pro photog Ming Thein:</p></p>
 <blockquote>
-<p>The last few bastions held by the DSLR form factor are being slowly overrun: like image quality, EVF quality has passed &lsquo;good enough&rsquo; and is well into the realm of very good to excellent.<&#47;p><br />
-<&#47;blockquote></p>
-<p>I've wrestled with whether to update my DSLR rig as the wife's due date approaches. After all, the birth of one's first born seems the requisite time for such. But I've come to realize that I haven't used my DSLR in several years now. For 90% of my photography, my iPhone is 'good enough' and, for the rest, I have a compact that's 'well into the realm of the very good.'<&#47;p></p>
+<p>The last few bastions held by the DSLR form factor are being slowly overrun: like image quality, EVF quality has passed &lsquo;good enough&rsquo; and is well into the realm of very good to excellent.</p><br />
+</blockquote></p>
+<p>I've wrestled with whether to update my DSLR rig as the wife's due date approaches. After all, the birth of one's first born seems the requisite time for such. But I've come to realize that I haven't used my DSLR in several years now. For 90% of my photography, my iPhone is 'good enough' and, for the rest, I have a compact that's 'well into the realm of the very good.'</p></p>
