--- a/_posts/2013-08-29-python-base-module.html
+++ b/_posts/2013-08-29-python-base-module.html
@@ -2,7 +2,7 @@
 layout: post
 status: publish
 published: true
-title: jcderr&#47;python-base-module
+title: jcderr/python-base-module
 author:
   display_name: jeremy.derr
   login: jeremy.derr
@@ -19,4 +19,4 @@ categories:
 tags: []
 comments: []
 ---
-<p>I found myself needing to make a lot of python classes based on dictionaries I was getting back from remote API services. Seemed only logical to make a class that made arbitrary attributes based on the info passed in.<&#47;p></p>
+<p>I found myself needing to make a lot of python classes based on dictionaries I was getting back from remote API services. Seemed only logical to make a class that made arbitrary attributes based on the info passed in.</p></p>
