--- a/_posts/2013-08-29-u-s-pat-no-d675886-snack-chip-eating-utensil.html
+++ b/_posts/2013-08-29-u-s-pat-no-d675886-snack-chip-eating-utensil.html
@@ -19,4 +19,4 @@ categories:
 tags: []
 comments: []
 ---
-<p>Looks like you get exactly what is promised.<&#47;p></p>
+<p>Looks like you get exactly what is promised.</p></p>
