--- a/_posts/2013-09-05-go-perds.html
+++ b/_posts/2013-09-05-go-perds.html
@@ -19,4 +19,4 @@ categories:
 tags: []
 comments: []
 ---
-<p>Marketing is run by the guys who got communications degrees. You think they would check stuff like this. I love how the club has owned this, though.<&#47;p></p>
+<p>Marketing is run by the guys who got communications degrees. You think they would check stuff like this. I love how the club has owned this, though.</p></p>
