--- a/_posts/2013-09-05-texas-has-decided-to-play-politics-with-our-military-families.html
+++ b/_posts/2013-09-05-texas-has-decided-to-play-politics-with-our-military-families.html
@@ -20,6 +20,6 @@ tags: []
 comments: []
 ---
 <blockquote>
-<p>The Texas National Guard has said it will not provide benefits for same-sex couples, despite a Pentagon directive requiring the military to treat all marriages equally.<&#47;p><br />
-<&#47;blockquote></p>
-<p>So much for "supporting our troops."<&#47;p></p>
+<p>The Texas National Guard has said it will not provide benefits for same-sex couples, despite a Pentagon directive requiring the military to treat all marriages equally.</p><br />
+</blockquote></p>
+<p>So much for "supporting our troops."</p></p>
