--- a/_posts/2013-09-12-samsung-confirms-next-galaxy-phones-will-be-64-bit.html
+++ b/_posts/2013-09-12-samsung-confirms-next-galaxy-phones-will-be-64-bit.html
@@ -19,4 +19,4 @@ categories:
 tags: []
 comments: []
 ---
-<p>And by "confirmed," I'm pretty sure they mean "Oh. Shit."<&#47;p></p>
+<p>And by "confirmed," I'm pretty sure they mean "Oh. Shit."</p></p>
