--- a/_posts/2013-09-12-shareholders-vote-to-take-dell-private.html
+++ b/_posts/2013-09-12-shareholders-vote-to-take-dell-private.html
@@ -20,7 +20,7 @@ tags: []
 comments: []
 ---
 <blockquote>
-<p>Dell says going private will help the company.<&#47;p><br />
-<&#47;blockquote></p>
-<p>In all honesty, I'm not sure there's much that can be done to help Dell. It will likely never be the giant that it once was, but there's nothing wrong with that. They dominated, basically "won," an industry that was the biggest growth industry there was for a time. Nothing Dell is going to do is going to return their industry to its glory days.<&#47;p></p>
-<p>There's good money to be made from their position in this market, it's just not the exponential growth money that they are accustomed to. Clearly they're not happy with that, but perhaps they should be.<&#47;p></p>
+<p>Dell says going private will help the company.</p><br />
+</blockquote></p>
+<p>In all honesty, I'm not sure there's much that can be done to help Dell. It will likely never be the giant that it once was, but there's nothing wrong with that. They dominated, basically "won," an industry that was the biggest growth industry there was for a time. Nothing Dell is going to do is going to return their industry to its glory days.</p></p>
+<p>There's good money to be made from their position in this market, it's just not the exponential growth money that they are accustomed to. Clearly they're not happy with that, but perhaps they should be.</p></p>
