--- a/_posts/2013-09-17-building-great-python-packages.html
+++ b/_posts/2013-09-17-building-great-python-packages.html
@@ -19,8 +19,8 @@ categories:
 tags: []
 comments: []
 ---
-<p>Python Guru Pat Miller:<&#47;p></p>
+<p>Python Guru Pat Miller:</p></p>
 <blockquote>
-<p>Used well, the &#95;&#95;init&#95;&#95;.py will afford you the flexibility to re-organize your internal package structure without worrying about side-effects from internal sub-module imports or the order imports within each module.<&#47;p><br />
-<&#47;blockquote></p>
-<p>Great advice. I write a ton of python and follow most of his advice already, but I need to be much more concise in my &#95;&#95;init&#95;&#95;.py files.<&#47;p></p>
+<p>Used well, the &#95;&#95;init&#95;&#95;.py will afford you the flexibility to re-organize your internal package structure without worrying about side-effects from internal sub-module imports or the order imports within each module.</p><br />
+</blockquote></p>
+<p>Great advice. I write a ton of python and follow most of his advice already, but I need to be much more concise in my &#95;&#95;init&#95;&#95;.py files.</p></p>
