--- a/_posts/2013-09-20-the-gallant-loophole.html
+++ b/_posts/2013-09-20-the-gallant-loophole.html
@@ -19,4 +19,4 @@ categories:
 tags: []
 comments: []
 ---
-<p>I'm going to call this the Gallant Loophole, because it sounds better that way. We started enforcing similar helmet rules in USA Hockey over the last few years, and not just during fisticuffs. These rules have so many nuances about how a helmet comes off and why that we wasted a large fraction of an 8-hour seminar on the subject one year. I don't foresee this going the NHL's way in the long run.<&#47;p></p>
+<p>I'm going to call this the Gallant Loophole, because it sounds better that way. We started enforcing similar helmet rules in USA Hockey over the last few years, and not just during fisticuffs. These rules have so many nuances about how a helmet comes off and why that we wasted a large fraction of an 8-hour seminar on the subject one year. I don't foresee this going the NHL's way in the long run.</p></p>
