--- a/_posts/2013-09-20-the-webdevelopment-bento-box.html
+++ b/_posts/2013-09-20-the-webdevelopment-bento-box.html
@@ -19,4 +19,4 @@ categories:
 tags: []
 comments: []
 ---
-<p>This is a great resource for newbies and vets alike; no one knows everything.<&#47;p></p>
+<p>This is a great resource for newbies and vets alike; no one knows everything.</p></p>
