--- a/_posts/2013-09-24-how-bilingual-child-tripled-sales.html
+++ b/_posts/2013-09-24-how-bilingual-child-tripled-sales.html
@@ -19,7 +19,7 @@ categories:
 tags: []
 comments: []
 ---
-<p>Michael Sacca:<&#47;p></p>
+<p>Michael Sacca:</p></p>
 <blockquote>
-<p>To date &mdash; the &lsquo;unlock all&rsquo; has been our highest grossing option.<&#47;p><br />
-<&#47;blockquote></p>
+<p>To date &mdash; the &lsquo;unlock all&rsquo; has been our highest grossing option.</p><br />
+</blockquote></p>
