--- a/_posts/2013-09-25-coyotes-redwhite-game-ref-cams.html
+++ b/_posts/2013-09-25-coyotes-redwhite-game-ref-cams.html
@@ -2,7 +2,7 @@
 layout: post
 status: publish
 published: true
-title: Coyotes Red&#47;White Game Ref Cams
+title: Coyotes Red/White Game Ref Cams
 author:
   display_name: jeremy.derr
   login: jeremy.derr
@@ -19,4 +19,4 @@ categories:
 tags: []
 comments: []
 ---
-<p>Incredible footage, a lot of fun to watch.<&#47;p></p>
+<p>Incredible footage, a lot of fun to watch.</p></p>
