--- a/_posts/2013-10-09-always-forward-ssh-agent.html
+++ b/_posts/2013-10-09-always-forward-ssh-agent.html
@@ -19,4 +19,4 @@ categories:
 tags: []
 comments: []
 ---
-<p>This has proved immensely helpful.<&#47;p></p>
+<p>This has proved immensely helpful.</p></p>
