--- a/_posts/2013-10-10-gruber-quantify-delight.html
+++ b/_posts/2013-10-10-gruber-quantify-delight.html
@@ -19,4 +19,4 @@ categories:
 tags: []
 comments: []
 ---
-<p>Apple asks, and answers, this question in every product they make. They're usually right, but have their missteps, certainly. However, I would argue that their competitors don't even acknowledge that this is a query, much less attempt to address it.<&#47;p></p>
+<p>Apple asks, and answers, this question in every product they make. They're usually right, but have their missteps, certainly. However, I would argue that their competitors don't even acknowledge that this is a query, much less attempt to address it.</p></p>
