--- a/_posts/2013-10-30-new-google-glasses-dorkier.html
+++ b/_posts/2013-10-30-new-google-glasses-dorkier.html
@@ -19,8 +19,8 @@ categories:
 tags: []
 comments: []
 ---
-<p>Armando Rodriguez at Tech Hive:<&#47;p></p>
+<p>Armando Rodriguez at Tech Hive:</p></p>
 <blockquote>
-<p>Google somehow found a way to make Glass look even nerdier.<&#47;p><br />
-<&#47;blockquote></p>
-<p>To say the least.<&#47;p></p>
+<p>Google somehow found a way to make Glass look even nerdier.</p><br />
+</blockquote></p>
+<p>To say the least.</p></p>
