--- a/_posts/2013-11-04-blackberry-abandons-sale.html
+++ b/_posts/2013-11-04-blackberry-abandons-sale.html
@@ -19,4 +19,4 @@ categories:
 tags: []
 comments: []
 ---
-<p>If you're surprised by this, you haven't been paying attention. BlackBerry, as a company, has absolutely nothing to offer anyone at this point. They don't have any substantial short term upsides, long term upsides, or even any meaningful assets aside from a marginal patent library, and the industry is already becoming weary of patent battles.<&#47;p></p>
+<p>If you're surprised by this, you haven't been paying attention. BlackBerry, as a company, has absolutely nothing to offer anyone at this point. They don't have any substantial short term upsides, long term upsides, or even any meaningful assets aside from a marginal patent library, and the industry is already becoming weary of patent battles.</p></p>
