--- a/_posts/2013-11-22-texas-board-of-ed-wont-let-it-go.html
+++ b/_posts/2013-11-22-texas-board-of-ed-wont-let-it-go.html
@@ -20,6 +20,6 @@ tags: []
 comments: []
 ---
 <blockquote>
-<p>The Texas Board of Education has refused to approve a biology book by one of the nation's largest publishers, pending an expert review of supposed "errors" on evolution.<&#47;p><br />
-<&#47;blockquote></p>
-<p>Just when we thought this whole thing had petered out...<&#47;p></p>
+<p>The Texas Board of Education has refused to approve a biology book by one of the nation's largest publishers, pending an expert review of supposed "errors" on evolution.</p><br />
+</blockquote></p>
+<p>Just when we thought this whole thing had petered out...</p></p>
