--- a/_posts/2013-12-06-mike-commodore-the-sei-shonagon-of-hockey.html
+++ b/_posts/2013-12-06-mike-commodore-the-sei-shonagon-of-hockey.html
@@ -19,8 +19,8 @@ categories:
 tags: []
 comments: []
 ---
-<p>From Commodore himself:<&#47;p></p>
+<p>From Commodore himself:</p></p>
 <blockquote>
-<p>[Head coach Scott Arniel] was jealous because he played a lot of years, he had a wife and kids and he felt he didn't earn a lot of money so he booted me off the team.<&#47;p><br />
-<&#47;blockquote></p>
-<p>Next he'll be complaining about Arniel's kids crying in the night.<&#47;p></p>
+<p>[Head coach Scott Arniel] was jealous because he played a lot of years, he had a wife and kids and he felt he didn't earn a lot of money so he booted me off the team.</p><br />
+</blockquote></p>
+<p>Next he'll be complaining about Arniel's kids crying in the night.</p></p>
