--- a/_posts/2013-12-06-penalized-for-swearing.html
+++ b/_posts/2013-12-06-penalized-for-swearing.html
@@ -19,8 +19,8 @@ categories:
 tags: []
 comments: []
 ---
-<p>The Guardian (and many other sources):<&#47;p></p>
+<p>The Guardian (and many other sources):</p></p>
 <blockquote>
-<p>That must-have feature has been found: the latest version of 2K Sports' flagship basketball series, NBA 2K14, penalises gamers for swearing. In real life.<&#47;p><br />
-<&#47;blockquote></p>
-<p>If the game console hears you swear, that's a T. Talk about immersion...<&#47;p></p>
+<p>That must-have feature has been found: the latest version of 2K Sports' flagship basketball series, NBA 2K14, penalises gamers for swearing. In real life.</p><br />
+</blockquote></p>
+<p>If the game console hears you swear, that's a T. Talk about immersion...</p></p>
