--- a/_posts/2013-12-06-science-of-dogs-100-years-of-breed-improvement.html
+++ b/_posts/2013-12-06-science-of-dogs-100-years-of-breed-improvement.html
@@ -20,5 +20,5 @@ tags: []
 comments: []
 ---
 <blockquote>
-<p>Conformation breeders claim they are improving the breed and yet they are often the cause of these problems. If &ldquo;improvement&rdquo; in looks imposes a health burden then it is not a breed improvement.<&#47;p><br />
-<&#47;blockquote></p>
+<p>Conformation breeders claim they are improving the breed and yet they are often the cause of these problems. If &ldquo;improvement&rdquo; in looks imposes a health burden then it is not a breed improvement.</p><br />
+</blockquote></p>
