--- a/_posts/2013-12-16-ap-fda-toughens-up-on-antibacterial-soap.html
+++ b/_posts/2013-12-16-ap-fda-toughens-up-on-antibacterial-soap.html
@@ -20,6 +20,6 @@ tags: []
 comments: []
 ---
 <blockquote>
-<p>Regulators at the Food and Drug Administration said they are revisiting the safety of chemicals such as triclosan in light of recent studies suggesting the substances can interfere with hormone levels and spur the growth of drug-resistant bacteria.<&#47;p><br />
-<&#47;blockquote></p>
-<p>The former concern is a new one to me; triclosan can affect hormone levels? Yeow.<&#47;p></p>
+<p>Regulators at the Food and Drug Administration said they are revisiting the safety of chemicals such as triclosan in light of recent studies suggesting the substances can interfere with hormone levels and spur the growth of drug-resistant bacteria.</p><br />
+</blockquote></p>
+<p>The former concern is a new one to me; triclosan can affect hormone levels? Yeow.</p></p>
