--- a/_posts/2013-12-16-facebook-is-holding-fans-hostage.html
+++ b/_posts/2013-12-16-facebook-is-holding-fans-hostage.html
@@ -19,8 +19,8 @@ categories:
 tags: []
 comments: []
 ---
-<p>Melonie Dodaro at Top Dog:<&#47;p></p>
+<p>Melonie Dodaro at Top Dog:</p></p>
 <blockquote>
-<p>Facebook is what I call a passive social network. Your success is always dependent upon waiting to gain page likes and then hoping and praying Facebook will actually show your posts to those who have liked your page.<&#47;p><br />
-<&#47;blockquote></p>
-<p>I have yet to hear a single success story about Facebook marketing, whether through free 'organic' impressions or paid ads. I am privy to a lot of Facebook marketing regret, though.<&#47;p></p>
+<p>Facebook is what I call a passive social network. Your success is always dependent upon waiting to gain page likes and then hoping and praying Facebook will actually show your posts to those who have liked your page.</p><br />
+</blockquote></p>
+<p>I have yet to hear a single success story about Facebook marketing, whether through free 'organic' impressions or paid ads. I am privy to a lot of Facebook marketing regret, though.</p></p>
