--- a/_posts/2013-12-16-journey-devops-continuous-delivery.html
+++ b/_posts/2013-12-16-journey-devops-continuous-delivery.html
@@ -19,4 +19,4 @@ categories:
 tags: []
 comments: []
 ---
-<p>A great slide deck on what I do. Or, at least, did. There's a new gig in my near future. I'll be focusing more on the development side from here.<&#47;p></p>
+<p>A great slide deck on what I do. Or, at least, did. There's a new gig in my near future. I'll be focusing more on the development side from here.</p></p>
