--- a/_posts/2013-12-16-on-undoing-fixing-or-removing-commits-in-git.html
+++ b/_posts/2013-12-16-on-undoing-fixing-or-removing-commits-in-git.html
@@ -19,5 +19,5 @@ categories:
 tags: []
 comments: []
 ---
-<p>Excellent roundup of git tips for cleaning up your repository. I routinely have to go behind developers (including myself) and amend and rebase commits that include proprietary information not for public release, or users' passwords that other employees should not have access to.<&#47;p></p>
-<p>Coincidentally, there's a special level of hell reserved for when these are in a repository's initial commit.<&#47;p></p>
+<p>Excellent roundup of git tips for cleaning up your repository. I routinely have to go behind developers (including myself) and amend and rebase commits that include proprietary information not for public release, or users' passwords that other employees should not have access to.</p></p>
+<p>Coincidentally, there's a special level of hell reserved for when these are in a repository's initial commit.</p></p>
