--- a/_posts/2013-12-16-protect-your-api-keys.html
+++ b/_posts/2013-12-16-protect-your-api-keys.html
@@ -19,8 +19,8 @@ categories:
 tags: []
 comments: []
 ---
-<p>Luke Chadwick:<&#47;p></p>
+<p>Luke Chadwick:</p></p>
 <blockquote>
-<p>On sunday night I received an email from Amazon saying that they'd detected my Amazon key on one of my repositories. This was a little bit of a surprise, because I'm usually so diligent about not saving credentials into repositories.<&#47;p><br />
-<&#47;blockquote></p>
-<p>Twenty cc2.8xlarge instances for two days came out to nearly $3500 in fraudulent charges.<&#47;p></p>
+<p>On sunday night I received an email from Amazon saying that they'd detected my Amazon key on one of my repositories. This was a little bit of a surprise, because I'm usually so diligent about not saving credentials into repositories.</p><br />
+</blockquote></p>
+<p>Twenty cc2.8xlarge instances for two days came out to nearly $3500 in fraudulent charges.</p></p>
