--- a/_posts/2013-12-16-your-own-mini-heroku.html
+++ b/_posts/2013-12-16-your-own-mini-heroku.html
@@ -19,4 +19,4 @@ categories:
 tags: []
 comments: []
 ---
-<p>I love Heroku, but for personal side-projects, this is just what the doctor ordered.<&#47;p></p>
+<p>I love Heroku, but for personal side-projects, this is just what the doctor ordered.</p></p>
