--- a/_posts/2013-12-18-improve-your-git-workflow.html
+++ b/_posts/2013-12-18-improve-your-git-workflow.html
@@ -19,4 +19,4 @@ categories:
 tags: []
 comments: []
 ---
-<p>Excellent roundup of Git best practices. If you're doing it right, you should be doing something akin to these examples.<&#47;p></p>
+<p>Excellent roundup of Git best practices. If you're doing it right, you should be doing something akin to these examples.</p></p>
