--- a/_posts/2014-01-02-winter-classic-pan.html
+++ b/_posts/2014-01-02-winter-classic-pan.html
@@ -19,6 +19,6 @@ categories:
 tags: []
 comments: []
 ---
-<p>Yesterday's snow at the Winter Classic produced slow-paced hockey. It slowed down skaters, it slowed down the puck, it interfered with passing, and clearly disrupted many players' timing. The game looked more like mid-level beer-league hockey than what we're accustomed to seeing at the NHL level. Outdoor hockey just doesn't produce terribly good hockey.<&#47;p></p>
-<p>Don't get me wrong. I find the idea behind the Winter Classic to be amazingly romantic and just oodles of fun. It harkens back to how hockey players learn how to play hockey: on the pond. It goes back to when the NHL's best and greatest were mere tykes, lacing up on park benches, learning their sport on frozen ponds while their parents watch from the sidelines shivering to stay warm, drinking hot chocolate or coffee from a thermos. Hockey in its purest form.<&#47;p></p>
-<p>It's just not the game we should expect from the NHL.<&#47;p></p>
+<p>Yesterday's snow at the Winter Classic produced slow-paced hockey. It slowed down skaters, it slowed down the puck, it interfered with passing, and clearly disrupted many players' timing. The game looked more like mid-level beer-league hockey than what we're accustomed to seeing at the NHL level. Outdoor hockey just doesn't produce terribly good hockey.</p></p>
+<p>Don't get me wrong. I find the idea behind the Winter Classic to be amazingly romantic and just oodles of fun. It harkens back to how hockey players learn how to play hockey: on the pond. It goes back to when the NHL's best and greatest were mere tykes, lacing up on park benches, learning their sport on frozen ponds while their parents watch from the sidelines shivering to stay warm, drinking hot chocolate or coffee from a thermos. Hockey in its purest form.</p></p>
+<p>It's just not the game we should expect from the NHL.</p></p>
