--- a/_posts/2014-01-10-dougie-hamilton-penalty.html
+++ b/_posts/2014-01-10-dougie-hamilton-penalty.html
@@ -19,4 +19,4 @@ categories:
 tags: []
 comments: []
 ---
-<p>This is the kind of stupidity that just has to <a href="http:&#47;&#47;www.youtube.com&#47;watch?v=UzSfMa55b4M&amp;noredirect=1">be seen to be believed<&#47;a>.<&#47;p></p>
+<p>This is the kind of stupidity that just has to <a href="http://www.youtube.com/watch?v=UzSfMa55b4M&amp;noredirect=1">be seen to be believed</a>.</p></p>
