--- a/_posts/2014-09-03-devops-not-doing-that.html
+++ b/_posts/2014-09-03-devops-not-doing-that.html
@@ -19,9 +19,9 @@ categories:
 tags: []
 comments: []
 ---
-<p>Jon Hendren:<&#47;p></p>
+<p>Jon Hendren:</p></p>
 <blockquote>
-<p>In the olden times you had your system admin people and your developers separate. [ ... ] The reason this was previously a problem is because everyone is extremely used to staring at their computer all day and zoning out and thinking about orcs or elves or whatever Lord of the Rings stuff was popular at the time instead of talking to their coworker friends about work.<&#47;p></p>
-<p>DevOps is mostly just a way of reorganizing all your nerds and making them talk to each other more.<&#47;p><br />
-<&#47;blockquote></p>
-<p>Hear, hear!<&#47;p></p>
+<p>In the olden times you had your system admin people and your developers separate. [ ... ] The reason this was previously a problem is because everyone is extremely used to staring at their computer all day and zoning out and thinking about orcs or elves or whatever Lord of the Rings stuff was popular at the time instead of talking to their coworker friends about work.</p></p>
+<p>DevOps is mostly just a way of reorganizing all your nerds and making them talk to each other more.</p><br />
+</blockquote></p>
+<p>Hear, hear!</p></p>
