--- a/_posts/2014-09-30-nginx-onbuild.html
+++ b/_posts/2014-09-30-nginx-onbuild.html
@@ -19,16 +19,16 @@ categories:
 tags: []
 comments: []
 ---
-<p>I needed a lightweight nginx setup that I just throw config files into, thus was born <a href="https:&#47;&#47;github.com&#47;jcderr&#47;docker-nginx-onbuild">docker-nginx-onbuild<&#47;a>. The base container will add any files in the context to <code>&#47;etc&#47;nginx<&#47;code> and your <code>CMD<&#47;code> need only be arguments to <code>nginx<&#47;code>.<&#47;p></p>
-<p>To build our nginx container here at <a href="http:&#47;&#47;djed.com">Djed<&#47;a>, my docker context has a few files:<&#47;p></p>
+<p>I needed a lightweight nginx setup that I just throw config files into, thus was born <a href="https://github.com/jcderr/docker-nginx-onbuild">docker-nginx-onbuild</a>. The base container will add any files in the context to <code>/etc/nginx</code> and your <code>CMD</code> need only be arguments to <code>nginx</code>.</p></p>
+<p>To build our nginx container here at <a href="http://djed.com">Djed</a>, my docker context has a few files:</p></p>
 <ul>
-<li>conf.d&#47;site.conf<&#47;li>
-<li>ssl&#47;certificate.crt<&#47;li>
-<li>ssl&#47;certificate.key<&#47;li><br />
-<&#47;ul></p>
-<p>My <code>Dockerfile<&#47;code> is very simple and looks like this:<&#47;p></p>
-<pre><code>FROM jcderr&#47;nginx-onbuild:latest<br />
+<li>conf.d/site.conf</li>
+<li>ssl/certificate.crt</li>
+<li>ssl/certificate.key</li><br />
+</ul></p>
+<p>My <code>Dockerfile</code> is very simple and looks like this:</p></p>
+<pre><code>FROM jcderr/nginx-onbuild:latest<br />
 MAINTAINER Jeremy Derr my@email<br />
 CMD [ "-g", "daemon off;" ]<br />
-<&#47;code><&#47;pre></p>
-<p><code>site.conf<&#47;code> defines my upstreams (which are sockets exported by other containers) and my hosts, and that's about it.<&#47;p></p>
+</code></pre></p>
+<p><code>site.conf</code> defines my upstreams (which are sockets exported by other containers) and my hosts, and that's about it.</p></p>
