--- a/_posts/2014-10-22-baseless-copyright-complaints-orlandoescape-com.html
+++ b/_posts/2014-10-22-baseless-copyright-complaints-orlandoescape-com.html
@@ -19,41 +19,41 @@ categories:
 tags: []
 comments: []
 ---
-<p>My dad and I run a community forum over at <a href="http:&#47;&#47;ratrodsrule.com&#47;forum&#47;">Rad Rods Rule<&#47;a>, a gathering place for hot rodders, rat rodders, petrolheads, and more. The site gets enough traffic that we occasionally have to chat with our hosting provider about all manner of issue, but otherwise it's possibly one of the lowest maintenance websites I've ever had the pleasure of running. Great bunch of guys.<&#47;p></p>
-<p>I've gotten a handful of entirely spurious abuse complaints against RRR in the last year that leave me feeling that the only real recourse is to bring about the public shaming. Today's baseless claim comes from Sunil Govind at OrlandoEscape.com, who apparently feels it's my responsibility to safeguard his Google PageRank rankings.<&#47;p></p>
-<p>Mr. Govind contacted my hosting provider with the following email:<&#47;p></p>
+<p>My dad and I run a community forum over at <a href="http://ratrodsrule.com/forum/">Rad Rods Rule</a>, a gathering place for hot rodders, rat rodders, petrolheads, and more. The site gets enough traffic that we occasionally have to chat with our hosting provider about all manner of issue, but otherwise it's possibly one of the lowest maintenance websites I've ever had the pleasure of running. Great bunch of guys.</p></p>
+<p>I've gotten a handful of entirely spurious abuse complaints against RRR in the last year that leave me feeling that the only real recourse is to bring about the public shaming. Today's baseless claim comes from Sunil Govind at OrlandoEscape.com, who apparently feels it's my responsibility to safeguard his Google PageRank rankings.</p></p>
+<p>Mr. Govind contacted my hosting provider with the following email:</p></p>
 <blockquote>
-<p>Re: Copyright Claim<&#47;p></p>
-<p>I work for the company: ORLANDOESCAPE.COM<&#47;p></p>
+<p>Re: Copyright Claim</p></p>
+<p>I work for the company: ORLANDOESCAPE.COM</p></p>
 <p>Note: All correspondence regarding this matter should be via<br />
-  sunil@orlandoescape.com<&#47;p></p>
+  sunil@orlandoescape.com</p></p>
 <p>Our site has been penalized by Google because of duplicated content which<br />
   is hosted on domains within your control, as result of this we have lost<br />
-  80% of our Google traffic and we need to get this content taken down ASAP!<&#47;p></p>
-<p>HOW THIS AFFECTS YOU?<&#47;p></p>
+  80% of our Google traffic and we need to get this content taken down ASAP!</p></p>
+<p>HOW THIS AFFECTS YOU?</p></p>
 <p>By knowingly linking to copyright infringing content, you could be liable<br />
   for 'contributory copyright infringement' see<br />
-  http:&#47;&#47;www.dmlp.org&#47;legal-guide&#47;linking-copyrighted-materials for more<br />
-  information!<&#47;p></p>
+  http://www.dmlp.org/legal-guide/linking-copyrighted-materials for more<br />
+  information!</p></p>
 <p>We have isolated the pages causing our penalty which we need to have<br />
-  removed,<&#47;p></p>
-<p>Where Exactly Are These Links And Content Which Need Removing?<&#47;p></p>
+  removed,</p></p>
+<p>Where Exactly Are These Links And Content Which Need Removing?</p></p>
 <p>Specifically the following pages which are most likely operated by the same<br />
-  person and located here:<&#47;p></p>
-<p><a href="http:&#47;&#47;ratrodsrule.com&#47;forum&#47;showthread.php?p=42598">http:&#47;&#47;ratrodsrule.com&#47;forum&#47;showthread.php?p=42598<&#47;a><&#47;p></p>
+  person and located here:</p></p>
+<p><a href="http://ratrodsrule.com/forum/showthread.php?p=42598">http://ratrodsrule.com/forum/showthread.php?p=42598</a></p></p>
 <p>On the following IPs:<br />
-  192.241.212.51<&#47;p></p>
+  192.241.212.51</p></p>
 <p>I have a good faith belief that use of the copyrighted<br />
   materials described<br />
   above as allegedly infringing is not authorized by the copyright owner, its<br />
-  agent, or the law and is being hosted by DIGITALOCEAN-6.<&#47;p></p>
+  agent, or the law and is being hosted by DIGITALOCEAN-6.</p></p>
 <p>I swear, under penalty of perjury, that the information in the notification<br />
   is accurate and that I am the copyright owner or am authorized to act on<br />
-  behalf of the owner of an exclusive right that is allegedly infringed.<&#47;p></p>
+  behalf of the owner of an exclusive right that is allegedly infringed.</p></p>
 <p>Kindest Regards<br />
   Sunil Govind<br />
-  http:&#47;&#47;www.<a href="orlandoescape.com">ORLANDOESCAPE.COM<&#47;a><br />
-  sunil@orlandoescape.com<&#47;p><br />
-<&#47;blockquote></p>
-<p>If you visit the thread linked on RatRodsRule, you'll notice that the "linked infringing content" is, in fact, a link directly to his own website. He's alleging here that his own website is infringing his own copyright, and that we're in violation for linking to his own infringement of his own content. It's obvious, of course, that what he's really concerned with is how our link to his site affects his PageRank.<&#47;p></p>
-<p>Thankfully, there's no provision of law, copyright or otherwise, which says that I am legally liable for any effects on his PageRank.<&#47;p></p>
+  http://www.<a href="orlandoescape.com">ORLANDOESCAPE.COM</a><br />
+  sunil@orlandoescape.com</p><br />
+</blockquote></p>
+<p>If you visit the thread linked on RatRodsRule, you'll notice that the "linked infringing content" is, in fact, a link directly to his own website. He's alleging here that his own website is infringing his own copyright, and that we're in violation for linking to his own infringement of his own content. It's obvious, of course, that what he's really concerned with is how our link to his site affects his PageRank.</p></p>
+<p>Thankfully, there's no provision of law, copyright or otherwise, which says that I am legally liable for any effects on his PageRank.</p></p>
