--- a/_posts/2014-12-01-the-perfect-hip-check.html
+++ b/_posts/2014-12-01-the-perfect-hip-check.html
@@ -19,5 +19,5 @@ categories:
 tags: []
 comments: []
 ---
-<p>Sometimes, it feels like the hip check is a lost art. We <a href="http:&#47;&#47;sports.yahoo.com&#47;blogs&#47;nhl-puck-daddy&#47;your-perfectly-executed-hip-check-of-the-day--video-135938662.html">get a great example<&#47;a> out of the KHL this week, though.<&#47;p></p>
-<p>While beautifully executed, I do have to point out that this is also a great example of Interference according to most North American standards of play.<&#47;p></p>
+<p>Sometimes, it feels like the hip check is a lost art. We <a href="http://sports.yahoo.com/blogs/nhl-puck-daddy/your-perfectly-executed-hip-check-of-the-day--video-135938662.html">get a great example</a> out of the KHL this week, though.</p></p>
+<p>While beautifully executed, I do have to point out that this is also a great example of Interference according to most North American standards of play.</p></p>
