--- a/_posts/2015-12-07-docker-kube-vm-1-0-0.html
+++ b/_posts/2015-12-07-docker-kube-vm-1-0-0.html
@@ -19,9 +19,9 @@ categories:
 tags: []
 comments: []
 ---
-<p>I've tagged <code>docker-kube-vm<&#47;code> as v1.0.0 <a href="https:&#47;&#47;github.com&#47;jcderr&#47;docker-kube-vm&#47;tree&#47;1.0.0">on github<&#47;a>. I've added some niceties.<&#47;p></p>
+<p>I've tagged <code>docker-kube-vm</code> as v1.0.0 <a href="https://github.com/jcderr/docker-kube-vm/tree/1.0.0">on github</a>. I've added some niceties.</p></p>
 <ul>
-<li>Now runs kubernetes-v1.1.2, the current stable release<&#47;li>
-<li>Now boots a small multi-node cluster<&#47;li>
-<li>Now bootstraps kube-ui and kube-dns<&#47;li><br />
-<&#47;ul></p>
+<li>Now runs kubernetes-v1.1.2, the current stable release</li>
+<li>Now boots a small multi-node cluster</li>
+<li>Now bootstraps kube-ui and kube-dns</li><br />
+</ul></p>
