--- a/_posts/2016-07-22-kubernetes-at-box.html
+++ b/_posts/2016-07-22-kubernetes-at-box.html
@@ -19,8 +19,8 @@ categories:
 tags: []
 comments: []
 ---
-<p>Sam Ghods, <a href="https:&#47;&#47;www.box.com&#47;blog&#47;kubernetes-box-microservices-maximum-velocity&#47;">writing on the Box Blog<&#47;a>:<&#47;p></p>
+<p>Sam Ghods, <a href="https://www.box.com/blog/kubernetes-box-microservices-maximum-velocity/">writing on the Box Blog</a>:</p></p>
 <blockquote>
-<p>This is one key difference between Kubernetes and other orchestration solutions - while most solutions would require you to go to many different systems to manage these pieces (or to write your own glue to tie those systems together), Kubernetes believes that your infrastructure should fundamentally be describable through a set of Kubernetes objects<&#47;p><br />
-<&#47;blockquote></p>
-<p>This might be the best description of the Kubernetes ethos I've seen yet, and it's been my driving force in implementing Kubernetes. I love the idea of describable infrastructure, and I love the idea of <em>disposable<&#47;em> infrastructure. Kubernetes gives us both.<&#47;p></p>
+<p>This is one key difference between Kubernetes and other orchestration solutions - while most solutions would require you to go to many different systems to manage these pieces (or to write your own glue to tie those systems together), Kubernetes believes that your infrastructure should fundamentally be describable through a set of Kubernetes objects</p><br />
+</blockquote></p>
+<p>This might be the best description of the Kubernetes ethos I've seen yet, and it's been my driving force in implementing Kubernetes. I love the idea of describable infrastructure, and I love the idea of <em>disposable</em> infrastructure. Kubernetes gives us both.</p></p>
