--- a/_posts/2013-08-29-cartoon-and-a-comedian.html
+++ b/_posts/2013-08-29-cartoon-and-a-comedian.html
@@ -20,5 +20,5 @@ tags: []
 comments: []
 ---
 <p>Laurence Barber:</p>
-<blockquote><p>The reason why is rooted largely in their unpredictability. They are the two current TV series where predicting what will happen in any given episode is nigh impossible and they are each committed to breaking the boundaries of conventional storytelling. Each is hugely critically-acclaimed and a phenomenon in their own small ways &mdash;&nbsp;<em>Adventure Time<&#47;em>&nbsp;is a massive ratings success with pan-generational appeal, and&nbsp;<em>Louie<&#47;em>&nbsp;has become the first basic cable show to score an Outstanding Comedy Series nomination at the Emmys.<&#47;blockquote><br />
+<blockquote><p>The reason why is rooted largely in their unpredictability. They are the two current TV series where predicting what will happen in any given episode is nigh impossible and they are each committed to breaking the boundaries of conventional storytelling. Each is hugely critically-acclaimed and a phenomenon in their own small ways &mdash;&nbsp;<em>Adventure Time</em>&nbsp;is a massive ratings success with pan-generational appeal, and&nbsp;<em>Louie</em>&nbsp;has become the first basic cable show to score an Outstanding Comedy Series nomination at the Emmys.</blockquote><br />
 Two of the best shows on TV. I have a hard time watching more than an episode of Louie at a time, though.</p>
