--- a/_posts/2013-09-19-hiroshi-yamauchi-passes.html
+++ b/_posts/2013-09-19-hiroshi-yamauchi-passes.html
@@ -19,4 +19,4 @@ categories:
 tags: []
 comments: []
 ---
-<p>Yamauchi played a role, however large or small, in so many of the things that define my generation, and we will be forever grateful. Mario is, of course, one of the most enduring characters ever created, but gamers of my generation will always have Kid Icarus, Samus Aran, Jordan and Bird, Megaman and his many zany nemeses, and the ever present Konami Code, all thanks to this man.<&#47;p></p>
+<p>Yamauchi played a role, however large or small, in so many of the things that define my generation, and we will be forever grateful. Mario is, of course, one of the most enduring characters ever created, but gamers of my generation will always have Kid Icarus, Samus Aran, Jordan and Bird, Megaman and his many zany nemeses, and the ever present Konami Code, all thanks to this man.</p></p>
