--- a/_posts/2013-10-10-judge-to-not-dead-man-youre-still-deceased.html
+++ b/_posts/2013-10-10-judge-to-not-dead-man-youre-still-deceased.html
@@ -19,8 +19,8 @@ categories:
 tags: []
 comments: []
 ---
-<p>From Lowering the Bar:<&#47;p></p>
+<p>From Lowering the Bar:</p></p>
 <blockquote>
-<p>"I don't know where that leaves you," the judge told him, "but you're still deceased as far as the law is concerned."<&#47;p><br />
-<&#47;blockquote></p>
-<p>If you go missing for 19 years and Ohio declares you deceased, you can't just show up alive. Even if you are.<&#47;p></p>
+<p>"I don't know where that leaves you," the judge told him, "but you're still deceased as far as the law is concerned."</p><br />
+</blockquote></p>
+<p>If you go missing for 19 years and Ohio declares you deceased, you can't just show up alive. Even if you are.</p></p>
