--- a/_posts/2013-11-06-ot-goal-missed-in-buffalos-favor.html
+++ b/_posts/2013-11-06-ot-goal-missed-in-buffalos-favor.html
@@ -19,4 +19,4 @@ categories:
 tags: []
 comments: []
 ---
-<p>Of course, this means that Buffalo fans can never again <a href="http:&#47;&#47;www.youtube.com&#47;watch?v=4_URO6cwLbM">whine about the refs blowing a call in OT<&#47;a>. Right?<&#47;p></p>
+<p>Of course, this means that Buffalo fans can never again <a href="http://www.youtube.com/watch?v=4_URO6cwLbM">whine about the refs blowing a call in OT</a>. Right?</p></p>
