--- a/_posts/2013-12-16-onswipe-sucks.html
+++ b/_posts/2013-12-16-onswipe-sucks.html
@@ -19,8 +19,8 @@ categories:
 tags: []
 comments: []
 ---
-<p>PZ Myers:<&#47;p></p>
+<p>PZ Myers:</p></p>
 <blockquote>
-<p>When I&rsquo;m browsing on my iPad, and I run into a site with OnSwipe enabled, I just abandon it. Nope, not worth the hassle.<&#47;p><br />
-<&#47;blockquote></p>
-<p>A million times, this.<&#47;p></p>
+<p>When I&rsquo;m browsing on my iPad, and I run into a site with OnSwipe enabled, I just abandon it. Nope, not worth the hassle.</p><br />
+</blockquote></p>
+<p>A million times, this.</p></p>
