--- a/_posts/2013-12-16-rockstar-developer-myth.html
+++ b/_posts/2013-12-16-rockstar-developer-myth.html
@@ -19,9 +19,9 @@ categories:
 tags: []
 comments: []
 ---
-<p>Christopher Buecheler:<&#47;p></p>
+<p>Christopher Buecheler:</p></p>
 <blockquote>
-<p>I think the thing that frustrates me the most about it is: they&rsquo;ll probably get a thousand applicants. A bunch of 25 year-old kids with a ton of talent and stars in their eyes are going to try to get this crap job for crap pay so they can work somewhere &ldquo;cool&rdquo; and feel like a part of something big.<&#47;p><br />
-<&#47;blockquote></p>
-<p>This is a big problem in the industry, and not isolated to Penny Arcade. I turn down unsolicited offers from startups all the time simply because they promise that they'll make up for the lack of decent pay by providing all sorts of "intangibles" and a great "work-life balance" and so on.<&#47;p></p>
-<p>But it's a big problem at bigger companies, too. Companies like Apple.<&#47;p></p>
+<p>I think the thing that frustrates me the most about it is: they&rsquo;ll probably get a thousand applicants. A bunch of 25 year-old kids with a ton of talent and stars in their eyes are going to try to get this crap job for crap pay so they can work somewhere &ldquo;cool&rdquo; and feel like a part of something big.</p><br />
+</blockquote></p>
+<p>This is a big problem in the industry, and not isolated to Penny Arcade. I turn down unsolicited offers from startups all the time simply because they promise that they'll make up for the lack of decent pay by providing all sorts of "intangibles" and a great "work-life balance" and so on.</p></p>
+<p>But it's a big problem at bigger companies, too. Companies like Apple.</p></p>
