--- a/_posts/2014-01-10-146.html
+++ b/_posts/2014-01-10-146.html
@@ -19,8 +19,8 @@ categories:
 tags: []
 comments: []
 ---
-<p>Fairfield University psychologist Linda Henkel:<&#47;p></p>
+<p>Fairfield University psychologist Linda Henkel:</p></p>
 <blockquote>
-<p>You're just kind of mentally discounting it--thinking, 'Well, the camera's got it.'<&#47;p><br />
-<&#47;blockquote></p>
-<p>I've noticed this in my own work, and that's part of the reason I've neglected my photography for the last few years. I broke my Nikon a while back and, while waiting for its repair, noticed that I was enjoying travel a lot better when I wasn't constantly looking at life like a photographer. I took trip to Paris a while back, and all I really remember from it now are what I see in the pictures I took; I don't want that to happen to my time with my son while he grows up.<&#47;p></p>
+<p>You're just kind of mentally discounting it--thinking, 'Well, the camera's got it.'</p><br />
+</blockquote></p>
+<p>I've noticed this in my own work, and that's part of the reason I've neglected my photography for the last few years. I broke my Nikon a while back and, while waiting for its repair, noticed that I was enjoying travel a lot better when I wasn't constantly looking at life like a photographer. I took trip to Paris a while back, and all I really remember from it now are what I see in the pictures I took; I don't want that to happen to my time with my son while he grows up.</p></p>
