--- a/_posts/2014-01-10-dougie-hamilton-penalty.html
+++ b/_posts/2014-01-10-dougie-hamilton-penalty.html
@@ -1,5 +1,5 @@
 ---
-layout: post
+layout: default
 status: publish
 published: true
 title: Dougie Hamilton and the Terrible, Horrible, No Good, Very Bad Play
