--- a/_posts/2015-03-11-do-things-right-the-first-time.html
+++ b/_posts/2015-03-11-do-things-right-the-first-time.html
@@ -1,5 +1,5 @@
 ---
-layout: post
+layout: default
 status: publish
 published: true
 title: 'The Only True Shortcut: Do Things Right the First Time'
