--- a/_posts/2013-09-05-texas-has-decided-to-play-politics-with-our-military-families.html
+++ b/_posts/2013-09-05-texas-has-decided-to-play-politics-with-our-military-families.html
@@ -1,5 +1,5 @@
 ---
-layout: post
+layout: default
 status: publish
 published: true
 title: "`Texas has decided to play politics with our military families`"
